| Bug #20376 | Doesn't auto-detect data dir | ||
|---|---|---|---|
| Submitted: | 10 Jun 2006 23:12 | Modified: | 13 Apr 2007 17:57 |
| Reporter: | Olaf van der Spek (Basic Quality Contributor) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.1.11 | OS: | Windows (Windows) |
| Assigned to: | Reggie Burnett | CPU Architecture: | Any |
[10 Jun 2006 23:12]
Olaf van der Spek
[14 Jun 2006 12:15]
Valeriy Kravchuk
Yes, ti run 5.1.11-beta as service successfully you have to --install it with explicit --defaults-file, and this file should contain explicit datadir. This is not required according to http://dev.mysql.com/doc/refman/5.1/en/windows-start-service.html, so, it looks like a bug. mysqld --console works OK without my.ini and uses default datadir.
[17 Jan 2007 18:17]
Reggie Burnett
This was the same problem with 5.0.
[17 Jan 2007 21:27]
Reggie Burnett
Fixed in 5.0.27
[17 Jan 2007 21:30]
Olaf van der Spek
Eh, 5.0.27 has already been released.
[17 Jan 2007 21:35]
Reggie Burnett
ok, my mistake. It's fixed in 5.0.28 then.
[17 Jan 2007 21:42]
Reggie Burnett
ok, sorry for the documenting misfires. I've been working exclusively with Connector/net for some time and lost track of where our 5.0 releases are at. After talking with Lenz, it appears this bug fix will be in 5.0.36. I think. :)
[19 Jan 2007 16:59]
Reggie Burnett
pushed into the 5.0-win tree
[3 Apr 2007 20:16]
Reggie Burnett
pushed into the 5.1-maint team tree
[6 Apr 2007 17:24]
Bugs System
Pushed into 5.1.18-beta
[13 Apr 2007 17:57]
Paul DuBois
Noted in 5.0.36, 5.1.18 changelogs. On Windows, if the server was installed as a service, it did not auto-detect the location of the data directory.
