Bug #20376 Doesn't auto-detect data dir

This changeset fixes the problem where mysql, when run as a service,
can't "detect" it's own data directory.